--- a/verify.ipynb
+++ b/verify.ipynb
@@ -131,6 +131,9 @@
    "source": [
     "from functions import *\n",
     "\n",
+    "# Set decimal precision to 12\n",
+    "iv.dps = 12\n",
+    "\n",
     "x, l, k = iv.mpf('0.58'), 5, 4\n",
     "M_lk(x, l, k, True)"
    ]
